fixed code block on mobile screen

--- a/Technical Documentation Page/style.css
+++ b/Technical Documentation Page/style.css
@@ -63,8 +63,7 @@ ul {
 code {
     background-color: #F7F7F7;
     display: block;
-    width: 500px;
-    
+    max-width: 500px;
 }
 
 @media (max-width: 815px) {
